# qr

./: .gitignore  .prettierrc.json  Cargo.old.toml  LICENSE  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json  vitest.config.mts  vitest.workspace.ts
apps/api/: .gitignore  Cargo.toml  Dockerfile  package.json
apps/api/src/: main.rs
apps/api/src/modules/qr/: router.rs
apps/api/src/utils/: tracing_subscriber.rs
apps/web/: package.json
apps/web/src/routes/: +page.svelte
src/app/: env.ts  layout.tsx  page.tsx  settings.ts
src/app/(routes)/: layout.tsx
src/app/(routes)/(home)/: page.tsx
src/app/_layouts/: base-layout.tsx  index.ts  root-layout.tsx
src/shared/assets/: tailwind.css
src/shared/assets/styles/: tailwind.css
src/shared/lib/: cn.ts  formatter.ts  index.ts
src/shared/ui/icons/: github.tsx  index.ts  telegram.tsx
tests/browser/: page.test.tsx
tests/unit/: cn.test.ts  formatter.test.ts
