[package]
name = "kyuar-api"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = "1.0"
serde_json = "1.0"
tracing = "0.1"

axum = { version = "0.8", features = ["json", "ws"] }
tokio = { version = "1.43", features = ["full"] }
tower-http = { version = "0.6", features = ["limit", "trace", "cors"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
